<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".CalculadoraActivity">

        <TextView
            android:id="@+id/mi_calculadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mi_calculadora"
            android:textColor="@color/black"
            android:background="@color/practica_rosa"
            android:textSize="30dp"
            android:padding="18dp" />

        <TextView
            android:id="@+id/bienbenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienbenida"
            android:textSize="25dp"
            android:padding="10dp"
            android:textColor="@color/texto_principal"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/calculadora"
            android:layout_width="215dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/calculadora_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pedir_n1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textColor="@color/texto_principal"
                android:text="@string/pedir_n1" />

            <TextView
                android:id="@+id/pedir_n2"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="15dp"
                android:textColor="@color/texto_principal"
                android:text="@string/pedir_n2" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/n1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:hint="@string/n1"
                android:textColor="@color/texto_principal"/>

            <EditText
                android:id="@+id/n2"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:hint="@string/n2"
                android:textColor="@color/texto_principal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="14dp"
                android:gravity="center"
                android:text="@string/suma" />

            <Button
                android:id="@+id/resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="14dp"
                android:gravity="center"
                android:text="@string/resta" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/multiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="14dp"
                android:gravity="center"
                android:text="@string/multiplicacion" />

            <Button
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="14dp"
                android:gravity="center"
                android:text="@string/division" />

        </LinearLayout>

        <TextView
            android:id="@+id/instruccion_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/instruccion_resultado"
            android:textColor="@color/texto_principal"/>

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/texto_principal"
            android:padding="8dp"
            android:textSize="20dp"
            tools:text="el resultado"/>

    </LinearLayout>

</LinearLayout>