<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".quizz.QuizzResultadoActivity">

    <TextView
        android:id="@+id/segundaPagina"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:background="@color/azulVerdoso3"
        android:gravity="center"
        android:text="@string/numero_preguta"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_correcta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/segundaPagina"
        app:layout_constraintStart_toStartOf="@+id/segundaPagina"
        app:layout_constraintTop_toBottomOf="@+id/segundaPagina" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/gris2"
        android:text="@string/boton_siguiente"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>